# notes

./: Cargo.toml  README.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/migrations/2022-08-06-222256_create_users/: up.sql
backend/src/: main.rs  schema.rs
backend/src/api/: users.rs
backend/src/api/error/: users.rs
backend/src/helpers/: defer.rs  mod.rs  password.rs  vector.rs
backend/src/model/: user.rs
backend/src/repository/: mod.rs  users.rs
